Update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mooselabs-climate-api",
+  "name": "mooselab-api-climate",
   "version": "1.0.0",
   "description": "",
   "type": "module",
